--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>edu.unc.lib.premistest</groupId>
     <artifactId>premistest</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>premistest</name>
@@ -14,7 +14,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>3.2.13.RELEASE</spring.version>
         <fcrepo.version>3.8.0</fcrepo.version>
-        <cdr.version>4.0-SNAPSHOT</cdr.version>
         <jena.version>3.1.1</jena.version>
         <tomcat.version>8.0.28</tomcat.version>
     </properties>
@@ -92,22 +91,6 @@
         </dependency>
 
     <dependency>
-        <groupId>edu.unc.lib.cdr</groupId>
-        <artifactId>metadata</artifactId>
-        <version>${cdr.version}</version>
-        <exclusions>
-            <exclusion>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
-            </exclusion>
-            <exclusion>
-                <groupId>log4j</groupId>
-                <artifactId>log4j</artifactId>
-            </exclusion>
-        </exclusions>
-    </dependency>
-
-    <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>1.1.7</version>
@@ -170,7 +153,7 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>edu.unc.lib.premistest.PremisTest</mainClass>
+                                    <mainClass>edu.unc.lib.premistest.PremisPersistenceTest</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
